fixed password input trouble with covered tag

--- a/src/components/common/formsControls/FormControls.module.scss
+++ b/src/components/common/formsControls/FormControls.module.scss
@@ -1,9 +1,11 @@
 .formControl {
   position: relative;
+  width: 100%;
 }
 
 .formControl.error input,
 .formControl.error textarea {
+  width: 100%;
   border: 1px solid tomato;
   margin-bottom: 26px;
 }
